<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_settings">Settings</string>
    <string name="app_market_link">https://play.google.com/store/apps/details?id=com.rheotv.android</string>
    <string name="app_google_play_store_link">https://play.google.com/store/apps/details?id=com.rheotv.android</string>
    <string name="title_posts">Posts</string>
    <string name="title_trending">Trending</string>
    <string name="title_profile">Profile</string>
    <string name="empty_screen">No Data Available</string>
    <string name="retry">Retry</string>
    <string name="please_retry">Retry again later!</string>
    <string name="district_dropdown"> Select District</string>
    <string name="app_name">Rheo</string>
    <string name="app_logo_url">https://s3.ap-south-1.amazonaws.com/unheard-files/default-logo/logo.png</string>
    <string name="partnerKey">tb9le6315057c043241b994f5e6f63c03a47f</string>
    <string name="media_url_mp4">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_mp4_http">http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_mp4_local">/storage/emulated/0/WhatsApp/Media/WhatsApp Video/VID-20180923-WA0002.mp4</string>
    <string name="sample_news_name">CM Arvind Kejriwal warns officials on mohalla clinics | Delhi News ...</string>
    <string name="sample_news_desc">Chief minister Arvind Kejriwal has warned health department officials that he would go to "any extent" to file criminal cases against ..</string>
    <string name="sample_journalist">Ravish Kumar</string>
    <string name="sample_meta">500K Views</string>
    <string name="followers">Followers</string>
    <string name="videos">Video</string>
    <string name="views">Views</string>
    <string name="photo_upload_permission">Please give permission to upload photo.</string>
    <string name="photo_thumbnail_permission">Please give permission to upload thumbnail.</string>
    <string name="submitting">Submitting... </string>
    <string name="update_message">Please update your app to get the latest feature.</string>
    <string name="bottom_nav_feed">Home</string>
    <string name="bottom_nav_trending">Trending</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">5643aa5dac049e3f3e98f57aafd16fd6</string>
    <string name="facebook_app_id">475789009899810</string>
    <string name="fb_login_protocol_scheme">fb475789009899810</string>
    <string name="login_screen_message">Log in with Google to live chat and stream.</string>
    <string name="profile_login_button">Login</string>
    <string name="signup_screen_message">Please enter your username.</string>
    <string name="login_current_balance"><u>Current Balance - ₹10/-</u></string>
    <string name="default_notification_channel_id">1</string>
    <string name="default_notification_channel_title">Mojo Times</string>
    <string name="msg_subscribed">Subscribed to topic!</string>
    <string name="msg_subscribe_failed">Something went wrong.</string>
    <string name="something_went_wrong_try_again">Something went wrong.\nPlease try again.</string>
    <string name="permission_message">Hello, we need location permission to better target the news and read/write permission to upload the video.</string>
    <string name="all_good">DONE</string>
    <string name="about_you">About you.</string>
    <string name="hint_comment">"Send a nice message to broadcaster..."</string>
    <string name="more">see more</string>
    <string name="less">less</string>
    <string name="whatsapp">Share</string>
    <string name="copy">Copy mobile number.</string>
    <string name="permission_action_button_yes">SURE</string>
    <string name="share">SHARE</string>
    <string name="share_only">Share</string>
    <string name="up_arrow">↑</string>
    <string name="down_arrow">↓</string>
    <string name="empty_name_message">Please fill in your name.</string>
    <string name="logging_wating_message">Please wait. Logging in.</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="name_hint">Username eg: hulk007 </string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view">View</string>
    <string name="views_count">Views</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="see_more">See more</string>
    <string name="playlist">Related videos</string>
    <string name="next_post">Next</string>
    <string name="next">Next</string>
    <string name="update">Please Update</string>
    <string name="skip_update">Skip</string>
    <string name="follow">Follow</string>
    <string name="whatsapp_not_installed_toast">Whatsapp not installed.</string>
    <string name="downloading">Download is in progress.</string>
    <string name="location_permission">Location Permission</string>
    <string name="download_app_message">Download</string>
    <string name="live_chat_active">Live Chat Active</string>
    <string name="rheo_tv_player_active">Rheo TV player active</string>
    <string name="followed">Followed</string>
    <string name="login_to_unlock_the_real_gamer_in_you">Login to unlock the real gamer in you!</string>
    <string name="views_label_leaderboard">views</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="monthly">This Month</string>
    <string name="weekly">This Week</string>
    <string name="daily">Today</string>
    <string name="sort_by">Sort by</string>
    <string name="see_all">See all</string>
    <string name="see_all_caps">See All</string>
    <string name="no_data_found_please_check_again_in_sometime">No data found! Please check again in sometime</string>
    <string name="player_request_message">No Play request available! Please stay tuned.</string>
    <string name="custom_room_request_empty_message">No Custom Room access request available! Please stay tuned.</string>
    <string name="no_data_found">No Results found!</string>
    <string name="edit_profile">edit_profile</string>
    <string name="edit_cover">edit_cover</string>
    <string name="edit_room_name">Edit Room Name</string>
    <string name="rules_text">Rules</string>
    <string name="update_text">Update</string>
    <string name="force_update_app">Update required</string>
    <string name="force_update_msg">App update is required. Please click on Update button.</string>
    <string name="invoices">Invoices</string>
    <string name="no_1080p_msg"> <u><b>Note\:</b></u> App does not support streaming in 1080p. Please stream in 720p or less resolution.</string>
    <string name="good_bio_msg">Add bio for fellow gamers to understand you better. </string>
    <string name="intro_message">Add one liner Introduction</string>
    <string name="action_save">Save</string>
    <string name="total_wallet_amount">Your Rheo wallet has</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="data_delayed_note"><u><b>Note\:</b></u> Data may be delayed by a few hours. Please contact support in case of discrepancies.</string>
    <string name="read_terms_text">I have read the Terms and Conditions.</string>
    <string name="report_this_title">Report this post?</string>
    <string name="report_this_comment">Report this comment?</string>
    <string name="report_comment">Do you want to report this comment as inappropriate?</string>
    <string name="report_content">Do you want to report this content as inappropriate?</string>
    <string name="post_report_success">Thank you for submitting your request. Our concerned team is on it and will take necessary action shortly.</string>
    <string name="will_start_in">Stream will start in</string>
    <string name="remind_me">Remind Me</string>
    <string name="error_retry_text">Something went wrong. Tap to retry.</string>
    <string name="error_message">Something went wrong. Please try after sometime.</string>
    <string name="end_of_clips_data_text">That\'s it for now. We are adding more and more clips for you. Keep exploring.</string>
    <string name="give_heart_text">\u2764 \u2764 Superb \u2764 \u2764 </string>
    <string name="overlay_permission_message">Now keep watching your favourite live stream while browsing your phone.</string>
    <string name="overlay_permission_click_allow">Please enable the permission on the settings page.</string>
    <string name="overlay_permission_title">Watch while you browse</string>
    <string name="delete_comment_success">Comment has been deleted. Thank you for your feedback.</string>
    <string name="user_block_message">Blocked user successfully</string>
    <string name="download_note_text">Note: You will receive an email with a download link on your registered email address which will be active only for 1 day. Select the video quality and click on submit.</string>
    <string name="congrat">Congrats</string>
    <string name="you_won">You Won</string>
    <string name="earn">Earn</string>
    <string name="next_milestone">Next Milestone</string>
    <string name="open_app_one_time_text">Woohoo!\nFor Opening The App 1 Time Today</string>
    <string name="watch_stream_for_ten_min_text">BY WATCHING A STREAM FOR 10 MINUTES</string>
    <string name="my_points">My Points</string>
    <string name="rheo_coins">Rheo Coins</string>
    <string name="history">History</string>
    <string name="redeem">Redeem</string>
    <string name="reward_alert">Reward Alert</string>
    <string name="reward">Reward</string>
    <string name="new_reward_in_message">New Scratch card will be available in $n.</string>
    <string name="new_reward_time_message">New Scratch card will be available in</string>
    <string name="ten_minute_reward_message">New Scratch card will be available in $n minutes. Do you want to Exit?</string>
    <string name="exit">Exit</string>
    <string name="come_back_tomorrow_reward_message">Come back tomorrow\nfor more Rewards.</string>
    <string name="loading_message">Loading…</string>
    <string name="empty_message">No record found</string>
    <string name="first_comment_reward_alert">Write your first comment and win bonus Rheo coins</string>
    <string name="login_to_get_reward_message">Login to unlock great rewards!</string>
    <string name="you_can_win_this_reward_by_login">You can win this reward by login</string>
    <string name="submit">Submit</string>
    <string name="leader_board">Leaderboard</string>
    <string name="high">High (Uses about 900 MB data per hour)</string>
    <string name="medium">Medium (Uses about 450 MB data per hour)</string>
    <string name="low">Low (Uses about 250 MB data per hour)</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="download_video">Download Video</string>
    <string name="add_moderators">Add Moderators</string>
    <string name="view_profile">View Profile</string>
    <string name="report">Report</string>
    <string name="offline_message">You\'re Offline. Check your connection</string>
    <string name="connect_internet">Connect to the internet</string>
    <string name="action_share_facebook_text">Like Rheo on Facebook</string>
    <string name="action_share_youtube_text">Subscribe Rheo on YouTube</string>
    <string name="action_share_instagram_text">Like Rheo on Instagram</string>
    <string name="buy_coin_description">You don\'t have enough coins. Buy coins now to send the gifts to your favourite streamer.</string>
    <string name="buy">Buy</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="community">Community</string>
</resources>