<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="layoutVisible"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:visibleWhen="@{layoutVisible}">

        <ImageView
            android:id="@+id/thumbnail_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avd_globe"
            android:padding="@dimen/margin_16"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/title_text_view" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thumbnail_image_view"
            app:layout_constraintBottom_toTopOf="@id/subtitle_text_view"
            android:textColor="@color/white_text_color"
            android:text="@string/connect_internet"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="@dimen/margin_8" />

        <TextView
            android:id="@+id/subtitle_text_view"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/retry_button"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            android:textColor="@color/grey_text_color"
            android:text="@string/offline_message"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="@dimen/margin_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_4"
            android:fontFamily="sans-serif-medium"
            android:text="@string/retry"
            android:textAllCaps="true"
            android:textColor="@color/color_accent"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_text_view"
            tools:text="Retry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>