<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.rheotv.android.utils.Status" />

        <variable
            name="viewModel"
            type="com.rheotv.android.ui.fragments.DownloadVideoFragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@drawable/bottom_sheet_backdrop">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button"
            android:background="@drawable/avd_footer_background" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/download_video"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/text_16"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintBottom_toTopOf="@id/instruction_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avd_back_white"
            app:layout_constraintBottom_toBottomOf="@+id/title_text_view"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@id/title_text_view"
            app:layout_constraintTop_toTopOf="@+id/title_text_view" />

        <TextView
            android:id="@+id/instruction_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:textColor="@color/white_text_color"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            android:text="Please select the video quality that you want to download." />

        <HorizontalScrollView
            android:id="@+id/quality_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@id/instruction_text_view"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/quality_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacing="@dimen/margin_4"
                app:singleSelection="true"
                app:chipSpacingHorizontal="@dimen/margin_12"
                app:chipSpacingVertical="@dimen/margin_4"
                app:singleLine="true" >

                <com.google.android.material.chip.Chip
                    android:id="@+id/video_quality_high"
                    style="@style/ChipChoiceStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/high" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipChoiceStyle"
                    android:id="@+id/video_quality_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/video_quality_low"
                    style="@style/ChipChoiceStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/low" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/download_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:textColor="@color/white_text_color"
            android:textSize="@dimen/text_12"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/quality_scroll"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
            tools:text="@string/download_note_text"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:indeterminateTint="@color/color_accent"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_32"
            android:progressTint="@color/color_accent"
            android:indeterminate="true"
            android:visibility="@{viewModel.downloadComplete == Status.LOADING ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintTop_toBottomOf="@id/download_note"
            app:layout_constraintBottom_toTopOf="@id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/BaseButtonStyle"
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_36"
            android:text="@string/submit"
            android:visibility="@{viewModel.downloadComplete == Status.LOADING ? View.GONE : View.VISIBLE, default=visible}"
            android:layout_marginTop="@dimen/margin_30"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>